--- a/Easy Hologram 4D/Easy Hologram 4D.csproj
+++ b/Easy Hologram 4D/Easy Hologram 4D.csproj
@@ -33,6 +33,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>logo.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -119,6 +122,9 @@
     <Resource Include="Assets\Tiles\IconicTileMediumLarge.png" />
     <Resource Include="Assets\Tiles\IconicTileSmall.png" />
     <Resource Include="Assets\viewhologram.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="logo.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
